--- a/HuaShanApp/gesture_lock/src/main/res/layout/activity_gesture_verify.xml
+++ b/HuaShanApp/gesture_lock/src/main/res/layout/activity_gesture_verify.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.percent.PercentRelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/beijing" >
@@ -75,6 +77,8 @@
         android:id="@+id/gesture_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_widthPercent="90%"
+        android:layout_centerHorizontal="true"
         android:layout_below="@id/gesture_tip_layout" >
     </FrameLayout>
 
@@ -106,4 +110,4 @@
             android:textColor="#E7E7E6" />
     </LinearLayout>
 
-</RelativeLayout>
+</android.support.percent.PercentRelativeLayout>
