--- a/HuaShanApp/gesture_lock/src/main/res/layout/activity_gesture_verify.xml
+++ b/HuaShanApp/gesture_lock/src/main/res/layout/activity_gesture_verify.xml
@@ -5,52 +5,49 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/beijing" >
+    android:background="#fff"
+    >
 
-    <RelativeLayout
+    <android.support.percent.PercentFrameLayout
         android:id="@+id/top_layout"
         android:layout_width="match_parent"
-        android:layout_height="46dip"
-        android:background="#000000"
-        android:paddingLeft="20dip"
-        android:paddingRight="20dip"
-        android:layout_alignParentTop="true"
-        android:visibility="gone" >
+        app:layout_heightPercent="15%"
+        android:visibility="visible" >
 
         <TextView
-            android:id="@+id/text_title"
+            android:id="@+id/text1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:text="@string/setup_gesture_code"
-            android:textSize="20sp"
-            android:textColor="#000000" />
+            app:layout_heightPercent="80%"
+            app:layout_marginLeftPercent="5%"
+            android:gravity="bottom"
+            android:text="12"
+            android:textColor="#afafaf"
+            />
 
         <TextView
-            android:id="@+id/text_cancel"
+            android:id="@+id/text2"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:gravity="right"
-            android:text="取消"
-            android:textSize="18sp"
-            android:textColor="@color/gesture_cancel_text_color" />
-    </RelativeLayout>
+            app:layout_heightPercent="20%"
+            app:layout_marginLeftPercent="5%"
+            android:layout_gravity="bottom"
+            android:text="成长就是渐渐温柔，克制，朴素"
+            android:textColor="#afafaf"/>
 
-    <LinearLayout
+
+    </android.support.percent.PercentFrameLayout>
+
+    <android.support.percent.PercentFrameLayout
         android:id="@+id/gesture_tip_layout"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        app:layout_heightPercent="15%"
+        app:layout_marginTopPercent="5%"
         android:layout_below="@id/top_layout"
-        android:orientation="vertical"
-        android:paddingTop="20dip" >
+        >
 
         <ImageView
             android:id="@+id/user_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            app:layout_widthPercent="18%"
+            app:layout_heightPercent="80%"
             android:layout_gravity="center_horizontal"
             android:src="@drawable/user_logo" />
 
@@ -61,17 +58,20 @@
             android:layout_marginTop="10dip"
             android:gravity="center_horizontal"
             android:text="152****8888"
-            android:textColor="#8C806F" />
+            android:textColor="#8C806F"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/text_tip"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            app:layout_heightPercent="20%"
             android:layout_marginTop="10dip"
             android:gravity="center_horizontal"
+            android:layout_gravity="bottom"
             android:textColor="#000000"
+            android:text="123d"
             android:visibility="invisible" />
-    </LinearLayout>
+    </android.support.percent.PercentFrameLayout>
 
     <FrameLayout
         android:id="@+id/gesture_container"
@@ -79,35 +79,46 @@
         android:layout_height="wrap_content"
         app:layout_widthPercent="90%"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/gesture_tip_layout" >
+        android:layout_below="@id/gesture_tip_layout"
+        >
     </FrameLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <android.support.percent.PercentFrameLayout
+        app:layout_widthPercent="75%"
+        app:layout_heightPercent="5%"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="50dip"
-        android:orientation="horizontal" >
+        android:layout_centerHorizontal="true"
+        app:layout_marginBottomPercent="8%"
+         >
 
         <TextView
             android:id="@+id/text_forget_gesture"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1.0"
+            app:layout_widthPercent="50%"
+            android:layout_gravity="center_vertical"
             android:gravity="center"
             android:textSize="16sp"
             android:text="@string/forget_gesture_code"
-            android:textColor="#E7E7E6" />
+            android:textColor="#afafaf" />
+
+        <ImageView
+            android:layout_width="1dp"
+            app:layout_heightPercent="60%"
+            android:layout_gravity="center"
+            android:background="#afafaf"
+            />
 
         <TextView
             android:id="@+id/text_other_account"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1.0"
+            app:layout_widthPercent="50%"
+            android:layout_gravity="right|center_vertical"
             android:gravity="center"
             android:textSize="16sp"
             android:text="@string/use_other_account_login"
-            android:textColor="#E7E7E6" />
-    </LinearLayout>
+            android:textColor="#afafaf" />
+    </android.support.percent.PercentFrameLayout>
 
 </android.support.percent.PercentRelativeLayout>
