--- a/HuaShanApp/app/src/main/res/layout/activity_findpassword.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_findpassword.xml
@@ -4,11 +4,11 @@
     <data>
         <variable
             name="entity"
-            type="com.karazam.huashanapp.user.findpassword.main.model.databinding.VerificationEntity"
+            type="com.karazam.huashanapp.user.findpassword.main.model.databinding.FindpasswordEntity"
             ></variable>
         <variable
             name="handler"
-            type="com.karazam.huashanapp.user.findpassword.main.viewmodel.VerificationViewModel"
+            type="com.karazam.huashanapp.user.findpassword.main.viewmodel.FindpasswordViewModel"
             ></variable>
     </data>
     <android.support.percent.PercentRelativeLayout
