--- a/HuaShanApp/app/src/main/res/layout/activity_login.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_login.xml
@@ -97,13 +97,14 @@
                     android:textSize="@dimen/login_text_size"
                     />
 
-                <EditText
+                <AutoCompleteTextView
                     android:id="@+id/ed_account"
                     app:layout_widthPercent="75%"
                     app:layout_heightPercent="50%"
                     android:layout_gravity="top|right"
                     android:hint="请输入用户名"
                     android:singleLine="true"
+                    android:inputType="number"
                     android:maxLines="1"
                     android:background="@null"
                     android:textColorHint="@color/login_hint_text_color"
