--- a/HuaShanApp/gesture_lock/src/main/res/layout/activity_gesture_edit.xml
+++ b/HuaShanApp/gesture_lock/src/main/res/layout/activity_gesture_edit.xml
@@ -4,38 +4,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fff" >
+    android:background="#fff"
+    android:id="@+id/content_pl">
 
-    <!--<RelativeLayout-->
-        <!--android:id="@+id/top_layout"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="46dip"-->
-        <!--android:background="#0894EC"-->
-        <!--android:paddingLeft="20dip"-->
-        <!--android:paddingRight="20dip"-->
-        <!--android:layout_alignParentTop="true" >-->
+    <android.support.percent.PercentRelativeLayout
+        android:id="@+id/top_layout"
+        android:layout_width="match_parent"
+        app:layout_heightPercent="10%"
+        android:layout_alignParentTop="true" >
 
-        <!--<TextView-->
-            <!--android:id="@+id/text_title"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_centerInParent="true"-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/setup_gesture_code"-->
-            <!--android:textSize="15dp"-->
-            <!--android:textColor="#ffffff" />-->
+        <TextView
+            android:id="@+id/text_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:text="@string/setup_gesture_code"
+            android:textSize="15dp"
+             />
 
-        <!--<TextView-->
-            <!--android:id="@+id/text_cancel"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_alignParentRight="true"-->
-            <!--android:layout_centerVertical="true"-->
-            <!--android:gravity="right"-->
-            <!--android:text="取消"-->
-            <!--android:textSize="15dp"-->
-            <!--android:textColor="#fff" />-->
-    <!--</RelativeLayout>-->
+        <ImageView
+            android:id="@+id/img_cancel"
+            app:layout_widthPercent="5%"
+            android:layout_height="wrap_content"
+            app:layout_marginLeftPercent="5%"
+            android:src="@drawable/cha"
+             />
+    </android.support.percent.PercentRelativeLayout>
 
     <LinearLayout
         android:id="@+id/gesture_tip_layout"
