--- a/HuaShanApp/gesture_lock/src/main/res/values/dimens.xml
+++ b/HuaShanApp/gesture_lock/src/main/res/values/dimens.xml
@@ -4,4 +4,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+
+    <dimen name="promptdialog_text_size_1">15dp</dimen>
+    <dimen name="promptdialog_text_size_2">12dp</dimen>
+    <dimen name="promptdialog_text_size_3">15dp</dimen>
+    <dimen name="promptdialog_text_size_4">18dp</dimen>
+
 </resources>
