--- a/HuaShanApp/app/src/main/res/layout/activity_findpassword.xml
+++ b/HuaShanApp/app/src/main/res/layout/activity_findpassword.xml
@@ -19,7 +19,7 @@
             android:id="@+id/title_ll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/title_color"
+            android:background="#fff"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             app:layout_heightPercent="8%"
@@ -34,9 +34,9 @@
                 <ImageView
 
                     android:layout_width="0dp"
-                    app:layout_widthPercent="7%"
+                    app:layout_widthPercent="5%"
                     android:layout_height="match_parent"
-                    android:src="@drawable/back_icon"
+                    android:src="@drawable/cha"
                     android:onClick="@{handler.onBack}"
                     />
 
@@ -46,9 +46,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:gravity="center"
-                android:text="短信验证"
-                android:textColor="#fff"
+                android:paddingLeft="20dp"
+                android:gravity="center_vertical"
+                android:text="找回密码"
+                android:textColor="#272636"
                 android:textSize="@dimen/title_text_size"/>
 
             <android.support.percent.PercentRelativeLayout
@@ -68,43 +69,44 @@
         </LinearLayout>
 
         <android.support.percent.PercentFrameLayout
+            android:id="@+id/content_pl"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/title_ll"
             app:layout_heightPercent="100%"
-            android:background="#fff"
+            android:background="@color/all_activity_background"
 
             >
 
 
             <android.support.percent.PercentFrameLayout
-                android:id="@+id/content_pl"
-                app:layout_widthPercent="88%"
-                android:layout_height="wrap_content"
+                app:layout_widthPercent="90%"
+                app:layout_heightPercent="9%"
                 android:background="@drawable/bg_fillet_ffffff_5dp"
-                app:layout_marginTopPercent ="10%"
+                app:layout_marginTopPercent ="5%"
                 android:layout_gravity="center_horizontal"
 
                 >
 
 
-                <ImageView
-                    app:layout_widthPercent="100%"
-                    android:layout_height="1dp"
-                    android:background="@color/register_content_line_color"
-                    android:layout_gravity="bottom|center_horizontal">
-
-                </ImageView>
+                <TextView
+                    app:layout_widthPercent="20%"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="手机号"
+                    android:textSize="@dimen/login_text_size"/>
 
 
                 Verify code
 
                 <EditText
-                    android:id="@+id/ed_verify_code_register"
-                    app:layout_widthPercent="67%"
-                    app:layout_heightPercent="10%"
+                    android:id="@+id/et_phonenum"
+                    app:layout_widthPercent="47%"
+                    android:layout_height="match_parent"
+                    app:layout_marginLeftPercent="20%"
                     android:layout_gravity="left"
-                    android:hint="请输入短信验证码"
+                    android:inputType="number"
+                    android:hint="请输入手机号"
                     android:singleLine="true"
                     android:maxLines="1"
                     android:background="@null"
@@ -114,14 +116,114 @@
 
                 <TextView
                     android:id="@+id/time"
-                    app:layout_widthPercent="33%"
-                    app:layout_heightPercent="10%"
-                    android:layout_gravity="right"
+                    app:layout_widthPercent="30%"
+                    app:layout_heightPercent="70%"
+                    app:layout_marginRightPercent="3%"
+                    android:layout_gravity="right|center_vertical"
+                    android:background="@drawable/bg_fillet_0894ec_5dp"
                     android:gravity="center"
-                    android:textColor="@color/login_hint_text_color"
-                    android:text="重新发送 (120)"
-                    android:onClick="@{handler.reacQuire}"
+                    android:textColor="#fff"
+                    android:text="获取验证码"
                     />
+            </android.support.percent.PercentFrameLayout>
+
+
+            <android.support.percent.PercentFrameLayout
+                app:layout_widthPercent="90%"
+                app:layout_heightPercent="9%"
+                android:background="@drawable/bg_fillet_ffffff_5dp"
+                app:layout_marginTopPercent ="16%"
+                android:layout_gravity="center_horizontal"
+
+                >
+
+
+                <TextView
+                    app:layout_widthPercent="20%"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="验证码"
+                    android:textSize="@dimen/login_text_size"/>
+
+
+                <EditText
+                    android:id="@+id/ed_code"
+                    app:layout_widthPercent="47%"
+                    android:layout_height="match_parent"
+                    app:layout_marginLeftPercent="20%"
+                    android:layout_gravity="left"
+                    android:hint="请输入短信验证码"
+                    android:singleLine="true"
+                    android:maxLines="1"
+                    android:background="@null"
+                    android:textColorHint="@color/login_hint_text_color"
+                    android:textSize="@dimen/login_text_size"/>
+
+
+            </android.support.percent.PercentFrameLayout>
+
+            <android.support.percent.PercentFrameLayout
+                app:layout_widthPercent="90%"
+                app:layout_heightPercent="9%"
+                android:background="@drawable/bg_fillet_ffffff_5dp"
+                app:layout_marginTopPercent ="27%"
+                android:layout_gravity="center_horizontal"
+                >
+
+                <TextView
+                    app:layout_widthPercent="20%"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="新密码"
+                    android:textSize="@dimen/login_text_size"/>
+
+                <EditText
+                    android:id="@+id/ed_password"
+                    app:layout_widthPercent="47%"
+                    android:layout_height="match_parent"
+                    app:layout_marginLeftPercent="20%"
+                    android:layout_gravity="left"
+                    android:hint="请输入至少6位密码"
+                    android:inputType="textPassword"
+                    android:singleLine="true"
+                    android:maxLines="1"
+                    android:background="@null"
+                    android:textColorHint="@color/login_hint_text_color"
+                    android:textSize="@dimen/login_text_size"/>
+
+
+            </android.support.percent.PercentFrameLayout>
+
+            <android.support.percent.PercentFrameLayout
+                app:layout_widthPercent="90%"
+                app:layout_heightPercent="9%"
+                android:background="@drawable/bg_fillet_ffffff_5dp"
+                app:layout_marginTopPercent ="38%"
+                android:layout_gravity="center_horizontal"
+                >
+
+                <TextView
+                    app:layout_widthPercent="20%"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="确   认"
+                    android:textSize="@dimen/login_text_size"/>
+
+                <EditText
+                    android:id="@+id/ed_password_two"
+                    app:layout_widthPercent="47%"
+                    android:layout_height="match_parent"
+                    app:layout_marginLeftPercent="20%"
+                    android:layout_gravity="left"
+                    android:hint="请再次输入密码"
+                    android:inputType="textPassword"
+                    android:singleLine="true"
+                    android:maxLines="1"
+                    android:background="@null"
+                    android:textColorHint="@color/login_hint_text_color"
+                    android:textSize="@dimen/login_text_size"/>
+
+
             </android.support.percent.PercentFrameLayout>
 
 
@@ -131,9 +233,9 @@
                 app:layout_heightPercent="8%"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
-                app:layout_marginTopPercent="30%"
+                app:layout_marginTopPercent="55%"
                 android:background="@drawable/bg_fillet_adadad_5dp"
-                android:text="下一步"
+                android:text="提交"
                 android:textSize="@dimen/app_text_size"
                 android:textColor="#fff"
                 android:clickable="true"
